--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <div class="profile-photo">
             <img src="HK PIC.jpg" alt="Your Name">
         </div>
-        <p>"I am a photographer and an aspiring designer, I am passionate about transforming ideas into visually appealing creations. With a keen eye for detail and a love for creativity, I am dedicated to crafting designs that not only captivate but also communicate effectively. I thrive on challenges, constantly seeking inspiration from the world around me to fuel my imagination. Committed to continuous learning and innovation, I am excited to embark on a journey where every project becomes an opportunity to bring innovative concepts to life."</p>
-    </section>
+       <div class ="cap">
+        <p>" I like capturing emotions through my lens and creating visually striking designs "</p>
+        <p>~Heramb Kaprekar</p> 
+       </div></section>
 
     <section id="skills">
         
