--- a/TEE FINAL/index.html
+++ b/TEE FINAL/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="logo">Heramb Kaprekar</div>
+        <div class="logo">Heramb Kaprekar's Portfolio</div>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
